--- a/picoFlash/Cargo.toml
+++ b/picoFlash/Cargo.toml
@@ -1,38 +1,28 @@
 [package]
-authors = ["Abhishek"]
-edition = "2018"
-readme = "README.md"
-name = "RPi-Pico"
+edition = "2021"
+name = "rp2040-flash"
 version = "0.1.0"
-resolver = "2"
 
 [dependencies]
-cortex-m = "0.7.3"
-cortex-m-rt = "0.7.0"
+cortex-m = "0.7"
+cortex-m-rt = "0.7"
 embedded-hal = { version = "0.2.5", features = ["unproven"] }
-embedded-time = "0.12.0"
+embedded-time = "0.12"
 
-panic-halt = "0.2.0"
-rp2040-hal = "0.4.0"
-# rp2040-boot2 = "0.2.0"
-
-defmt = "0.3.0"
-defmt-rtt = "0.3.0"
-panic-probe = { version = "0.3.0", features = ["print-defmt"] }
+defmt = "0.3"
+defmt-rtt = "0.3"
+panic-probe = { version = "0.3", features = ["print-defmt"] }
 
 # We're using a Pico by default on this template
-rp-pico = "0.3.0"
-
-usb-device= "0.2.8"
-usbd-serial = "0.1.1"
-usbd-hid = "0.5.1"
+rp-pico = "0.4"
+rp2040-hal = "0.5.0"
 
 # but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
-# sparkfun-pro-micro-rp2040 = "0.2.0"
+# sparkfun-pro-micro-rp2040 = "0.3"
 
 # If you're not going to use a Board Support Package you'll need these:
-# rp2040-hal = { version="0.4.0", features=["rt"] }
-# rp2040-boot2 = "0.2.0"
+# rp2040-hal = { version="0.5", features=["rt"] }
+# rp2040-boot2 = "0.2"
 
 # cargo build/run
 [profile.dev]
